# sylgeo-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  server-card.json  smithery.yaml
src/sylgeo_mcp/: __init__.py  api_client.py  server.py
