[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sylgeo-mcp"
version = "0.1.0"
description = "Sylgeo MCP Server — Check your brand's AI visibility across ChatGPT, Claude, Gemini & Perplexity"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sylgeo", email = "support@sylgeo.com" }
]
keywords = ["mcp", "geo", "seo", "ai-visibility", "chatgpt", "claude", "gemini", "perplexity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp[cli]>=1.27",
    "httpx>=0.27",
]

[project.scripts]
sylgeo-mcp = "sylgeo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sylgeo_mcp"]
